feat: Add MCP (Model Context Protocol) server implementation
- Create services/mcp_server package with FastMCP-based server
- Implement 8 MCP tools: query_rag, search_web, search_codebase, ingest_repository, execute_command, get_llm_adapters, get_system_health, generate_text
- Add 4 MCP resources: config, health, adapters/llm, stats
- Add 5 MCP prompts: code_review, explain_code, debug_error, search_codebase_query, generate_tests
- Support stdio, HTTP (streamable-http), and SSE transports
- Add docker-compose configuration for MCP server on port 8010
- Add Claude Desktop configuration example
- Add run_mcp.py convenience script
- Add mcp[cli]>=1.0.0 dependency

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,6 +94,24 @@ services:
     cap_add:
       - DAC_OVERRIDE  # For file operations
 
+  mcp-server:
+    build:
+      context: .
+      dockerfile: ./services/mcp_server/Dockerfile
+    ports:
+      - "8010:8010"
+    environment:
+      - API_GATEWAY_URL=http://api_gateway:8080
+      - TERMINAL_EXECUTOR_URL=http://terminal-executor:8006
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
+    depends_on:
+      - api_gateway
+      - terminal-executor
+    networks:
+      - contextforge
+    # For HTTP transport, use: ["python", "-m", "services.mcp_server.app", "http", "--port", "8010"]
+    command: ["python", "-m", "services.mcp_server.app", "http", "--port", "8010"]
+
 volumes:
   vector_data:
   repo_data:
