--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,9 @@ lxml>=4.9.3
 httpx>=0.25.2
 aiohttp>=3.9.1
 
+# MCP (Model Context Protocol)
+mcp[cli]>=1.0.0
+
 # Utilities
 python-dotenv>=1.0.0
 structlog>=23.2.0
