feat: Add Remote Agent service for distributed task processing
- Create services/remote_agent package with:
  - models.py: Pydantic models for Agent, Task, TaskResult, etc.
  - registry.py: In-memory agent registry with registration, discovery, health tracking
  - queue.py: Priority-based task queue with submission, status tracking, result retrieval
  - coordinator.py: Central coordinator for task distribution and agent management
  - worker.py: Agent worker with task handlers for code analysis, RAG, web search
  - app.py: FastAPI application for running coordinator or worker mode

- Add agent_routes.py to API Gateway with REST and WebSocket endpoints:
  - POST /agents/register - Register new agent
  - DELETE /agents/{agent_id} - Deregister agent
  - GET /agents - List all agents
  - POST /agents/{agent_id}/heartbeat - Process heartbeat
  - POST /tasks/submit - Submit new task
  - GET /tasks/{task_id} - Get task status
  - GET /tasks/{task_id}/result - Get task result
  - DELETE /tasks/{task_id} - Cancel task
  - WS /ws/tasks/{task_id} - Real-time task updates
  - WS /ws/agents - Real-time agent status

- Add remote-agent service to docker-compose.yml
- Add run_remote_agent.py convenience script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,6 +112,37 @@ services:
     # For HTTP transport, use: ["python", "-m", "services.mcp_server.app", "http", "--port", "8010"]
     command: ["python", "-m", "services.mcp_server.app", "http", "--port", "8010"]
 
+  remote-agent:
+    build:
+      context: .
+      dockerfile: ./services/remote_agent/Dockerfile
+    ports:
+      - "8011:8011"
+    environment:
+      - COORDINATOR_MODE=true
+      - WORKER_MODE=false
+      - API_GATEWAY_URL=http://api_gateway:8080
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
+    depends_on:
+      - api_gateway
+    networks:
+      - contextforge
+
+  # Additional worker agents can be added like this:
+  # remote-agent-worker-1:
+  #   build:
+  #     context: .
+  #     dockerfile: ./services/remote_agent/Dockerfile
+  #   environment:
+  #     - COORDINATOR_MODE=false
+  #     - WORKER_MODE=true
+  #     - COORDINATOR_URL=http://remote-agent:8011
+  #     - AGENT_NAME=Worker-1
+  #   depends_on:
+  #     - remote-agent
+  #   networks:
+  #     - contextforge
+
 volumes:
   vector_data:
   repo_data:
