Add 7 new language chunkers and fix VS Code extension views
New Language Support:
- C# (.cs): namespaces, classes, interfaces, methods, properties, XML doc comments
- Rust (.rs): modules, functions, structs, enums, impl blocks, traits, doc comments
- R (.r, .R, .rmd): functions, S4/R6 classes, roxygen2 comments
- Java (.java): packages, imports, classes, interfaces, enums, methods, Javadoc
- Go (.go): packages, imports, functions, structs, interfaces, doc comments
- Swift (.swift): imports, classes, structs, enums, protocols, extensions
- Kotlin (.kt, .kts): packages, imports, classes, interfaces, objects, KDoc

VS Code Extension Fixes:
- Fixed view registration errors by adding type: webview to view definitions
- Aligned view IDs between package.json and TypeScript code
- Fixed chat panel data provider registration

Other Changes:
- Added .gitignore for Python, Node, and IDE files
- Added STARTUP_GUIDE.md with service startup commands
- Added start-contextforge.ps1 PowerShell startup script
- Updated README.md with documentation
- Added comprehensive tests for all new language chunkers (52 tests passing)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,11 +122,30 @@ services:
       - COORDINATOR_MODE=true
       - WORKER_MODE=false
       - API_GATEWAY_URL=http://api_gateway:8080
+      - USE_REDIS=true
+      - REDIS_URL=redis://redis:6379/0
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
     depends_on:
       - api_gateway
+      - redis
     networks:
       - contextforge
+
+  # Redis for persistent storage (optional but recommended)
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - contextforge
+    command: redis-server --appendonly yes
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # Additional worker agents can be added like this:
   # remote-agent-worker-1:
@@ -147,6 +166,7 @@ volumes:
   vector_data:
   repo_data:
   web_cache:
+  redis_data:
 
 networks:
   contextforge:
