--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # Core dependencies for ContextForge
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-requests==2.31.0
-python-multipart==0.0.6
+fastapi>=0.110.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.5.0
+requests>=2.31.0
+python-multipart>=0.0.6
 
 # Vector search and embeddings
 faiss-cpu>=1.9.0
@@ -22,7 +22,7 @@ beautifulsoup4>=4.12.2
 lxml>=4.9.3
 
 # HTTP and async
-httpx>=0.25.2
+httpx>=0.27.0
 aiohttp>=3.9.1
 
 # MCP (Model Context Protocol)
@@ -39,5 +39,5 @@ pytest-asyncio>=0.21.0
 pytest-mock>=3.10.0
 
 # Database and storage
-sqlite3-utils>=3.35.2
+sqlite-utils>=3.35.2
 redis>=5.0.0
