refactor: Extract helper methods in CodeIndex and core services for better maintainability
CodeIndex (services/index/__init__.py):
- Extract index_repository into helper methods:
  - _collect_source_files(): Collect files matching extensions
  - _is_excluded_path(): Check if path should be excluded
  - _process_files(): Process all files and gather statistics
  - _index_single_file(): Index a single file
  - _compute_file_hash(): Compute content hash
  - _file_unchanged(): Check if file changed since last index
  - _store_fragments(): Store fragments and update symbol index
  - _build_stats(): Build IndexStats from results
- Extract search method helpers:
  - _add_exact_symbol_matches(): Add exact symbol matches
  - _add_partial_symbol_matches(): Add partial symbol matches
  - _add_path_matches(): Add file path matches
- Add class constants DEFAULT_EXTENSIONS and EXCLUDED_DIRECTORIES

Core services (services/core/__init__.py):
- Refactor TestResult.from_pytest_output:
  - Add MAX_OUTPUT_LENGTH class constant
  - _parse_test_counts(): Parse test counts from output
  - _extract_error_details(): Extract failure/error details
  - _truncate_output(): Truncate output to max length
- Refactor LLMRouter._query_local:
  - Add LOCAL_BACKENDS configuration constant
  - _try_local_backend(): Try a single local LLM backend
  - Eliminate duplicated Ollama/LM Studio code
- Refactor CoordinatorAgent._filter_by_scope:
  - _agent_consumes_all(): Check if agent consumes all types
  - _context_matches_scope(): Check if context matches allowed types

All 471+ tests pass (excluding 2 pre-existing failures unrelated to refactoring)

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,123 @@
-# ContextForge Environment Configuration
-# Copy this file to .env and fill in your values
+# ContextForge Environment Configuration Example
+# =============================================================================
+# Copy this file to .env and customize for your environment.
+# =============================================================================
 
 # =============================================================================
 # LLM Configuration
 # =============================================================================
-# ContextForge supports multiple LLM providers. Configure at least one:
-# - Ollama (local, recommended for privacy)
-# - OpenAI (remote, requires API key)
-# - Anthropic Claude (remote, requires API key)
-# - LM Studio (local alternative to Ollama)
+# Priority order: comma-separated list of backends to try in order
+# Options: local (ollama/lm_studio), cloud (openai/anthropic/gemini)
+LLM_PRIORITY=local,cloud
 
-# OpenAI API
-OPENAI_API_KEY=
+# Ollama (local) - PRIMARY for local mode
+OLLAMA_URL=http://localhost:11434/api/generate
+OLLAMA_MODEL=llama2-13b-code
 
-# Anthropic Claude API
-ANTHROPIC_API_KEY=
+# LM Studio (local) - FALLBACK for local mode
+LM_STUDIO_URL=http://localhost:1234/v1/chat/completions
 
-# Mistral AI API
-MISTRAL_API_KEY=
+# Cloud LLM API Keys (uncomment and set for cloud mode)
+# CLOUD_LLM_API_KEY=your_key_here
+# OPENAI_API_KEY=sk-your-openai-key
+# ANTHROPIC_API_KEY=sk-ant-your-anthropic-key
+# GEMINI_API_KEY=your-gemini-key
+# MISTRAL_API_KEY=your-mistral-key
+
+# LLM Settings
+LLM_TIMEOUT=60
+LLM_MAX_TOKENS=512
+LLM_TEMPERATURE=0.7
 
 # =============================================================================
-# Web Search API Keys
+# Database Configuration
 # =============================================================================
+# Database type: postgresql (recommended for 500k+ LOC), sqlite, memory
+DB_TYPE=postgresql
+
+# PostgreSQL settings
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=contextforge
+DB_PASS=yourpassword
+DB_NAME=contextforge_db
+DATABASE_URL=postgresql://contextforge:yourpassword@localhost:5432/contextforge_db
+
+# Enable PostgreSQL persistence (set to true for production)
+USE_POSTGRES=false
+
+# =============================================================================
+# Redis Cache Configuration
+# =============================================================================
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_URL=redis://localhost:6379/0
+REDIS_PREFIX=contextforge:
+REDIS_CACHE_TTL=3600
+
+# Enable Redis cache (recommended for production)
+USE_REDIS=false
+
+# =============================================================================
+# Search / Indexing Configuration
+# =============================================================================
+# Chunking settings (in tokens)
+CHUNK_SIZE=1024
+CHUNK_OVERLAP=100
+MAX_CHUNK_SIZE=2048
+MIN_CHUNK_SIZE=128
+
+# Embedding model (all-mpnet-base-v2 recommended for quality)
+EMBEDDING_MODEL=all-mpnet-base-v2
+CODE_EMBEDDING_MODEL=microsoft/codebert-base
+USE_CODE_EMBEDDINGS=true
+EMBEDDING_DIM=768
+
+# FAISS settings (HNSW recommended for large repos)
+FAISS_INDEX_TYPE=HNSW
+FAISS_HNSW_NEIGHBORS=32
+FAISS_NPROBE=10
+FAISS_INDEX_PATH=data/vector_index/faiss_index.index
+
+# Hybrid search (semantic + lexical)
+HYBRID_SEARCH_ENABLED=true
+DENSE_WEIGHT=0.7
+LEXICAL_WEIGHT=0.3
+
+# Recency boost for recent code changes
+RECENCY_BOOST_ENABLED=true
+RECENCY_BOOST_FACTOR=0.1
+
+# Search parameters
+VECTOR_TOP_K=10
+RERANK_ENABLED=true
+RERANK_TOP_K=50
+
+# =============================================================================
+# Privacy / Logging Configuration
+# =============================================================================
+PRIVACY_MODE=true
+LOG_LEVEL=INFO
+LOG_FORMAT=%(asctime)s - %(levelname)s - %(name)s - %(message)s
+LOG_FILE=logs/contextforge.log
+LOG_TO_FILE=false
+
+# =============================================================================
+# Auto-Terminal / Agent Configuration
+# =============================================================================
+AUTO_TERMINAL_MODE=true
+AUTO_TERMINAL_TIMEOUT=30
+AUTO_TERMINAL_MAX_OUTPUT=10000
+AUTO_TERMINAL_SAFE_ONLY=true
+
+# =============================================================================
+# Web Search Configuration
+# =============================================================================
+ENABLE_WEB_SEARCH=false
+WEB_SEARCH_PROVIDER=google
+WEB_SEARCH_API_KEY=
+WEB_CACHE_TTL=86400
 
 # SerpAPI (Google Search)
 SERPAPI_KEY=
@@ -34,60 +130,68 @@ GOOGLE_CSE_KEY=
 GOOGLE_CSE_ID=
 
 # =============================================================================
-# Local LLM Endpoints
+# Service URLs (for local development / Docker Compose)
 # =============================================================================
-
-# Ollama (local)
-OLLAMA_URL=http://localhost:11434/api/generate
-OLLAMA_MODEL=mistral
-
-# LM Studio (local)
-LM_STUDIO_URL=http://localhost:8085/generate
+VECTOR_INDEX_URL=http://localhost:8001
+PREPROCESSOR_URL=http://localhost:8003
+CONNECTOR_URL=http://localhost:8002
+WEB_FETCHER_URL=http://localhost:8004
+TERMINAL_EXECUTOR_URL=http://localhost:8006
 
 # =============================================================================
-# Service Configuration
+# Agent Orchestration Configuration
 # =============================================================================
-
-# Internal service URLs (for Docker Compose)
-VECTOR_INDEX_URL=http://vector-index:8001
-PREPROCESSOR_URL=http://preprocessor:8003
-CONNECTOR_URL=http://connector:8002
-WEB_FETCHER_URL=http://web-fetcher:8004
-
-# LLM Priority (comma-separated, first available wins)
-# Options: ollama, lm_studio, openai, anthropic
-# Default: ollama (requires Ollama to be running)
-LLM_PRIORITY=ollama
-
-# Web search configuration
-ENABLE_WEB_SEARCH=True
-WEB_SEARCH_RESULTS=5
+AGENT_MAX_CONCURRENT=4
+AGENT_HEARTBEAT_INTERVAL=10
+AGENT_TASK_TIMEOUT=300
+AGENT_RETRY_ATTEMPTS=3
 
 # =============================================================================
-# Runtime Configuration
+# Scaling Configuration (for large repos)
 # =============================================================================
+# Enable parallel indexing for repos > 500k LOC
+PARALLEL_INDEXING_ENABLED=true
+MODULE_LEVEL_PARALLELISM=true
+MAX_INDEXING_WORKERS=4
+BATCH_SIZE=100
 
-# Logging level
-LOG_LEVEL=INFO
-
-# Request timeouts (seconds)
-LLM_TIMEOUT=30
-SEARCH_TIMEOUT=10
-EMBEDDING_TIMEOUT=15
-
-# Vector search parameters
-VECTOR_TOP_K=10
-EMBEDDING_MODEL=all-MiniLM-L6-v2
-
-# Rate limiting
-RATE_LIMIT_REQUESTS=100
-RATE_LIMIT_WINDOW=60
+# Incremental indexing (only re-index changed files)
+INCREMENTAL_INDEX_ENABLED=true
+INDEX_WATCH_ENABLED=false
+INDEX_REFRESH_INTERVAL=86400
+GIT_INTEGRATION_ENABLED=true
 
 # =============================================================================
-# Data Privacy Settings
+# Data Encryption Settings
 # =============================================================================
+# Enable data encryption for privacy-sensitive deployments
+ENABLE_ENCRYPTION=false
 
-# Set to 'local' to prevent any remote LLM calls
-# Set to 'hybrid' to allow remote calls with user consent
-# Set to 'remote' to allow all remote calls
-PRIVACY_MODE=local
+# Encryption key (32 bytes, base64 encoded)
+# Generate with: python -c "import secrets, base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"
+ENCRYPTION_KEY=
+
+# Encrypt API keys in storage
+ENCRYPT_API_KEYS=true
+
+# Encrypt query content
+ENCRYPT_QUERIES=false
+
+# Encrypt context data
+ENCRYPT_CONTEXT=false
+
+# =============================================================================
+# Data Directory Configuration
+# =============================================================================
+DATA_DIR=data
+REPOS_DIR=data/repos
+CACHE_DIR=data/cache
+LOGS_DIR=logs
+
+# =============================================================================
+# Repo Size Recommendations
+# =============================================================================
+# 100k LOC: SQLite + Redis optional, single process indexing
+# 500k LOC: PostgreSQL + Redis + multi-threaded FAISS HNSW
+# 1-2M LOC: Distributed agents + disk-backed FAISS + module parallelism
+# 2M+ LOC: Hybrid cloud with local embeddings + cloud LLM reasoning
