--- a/requirements.txt
+++ b/requirements.txt
@@ -41,3 +41,10 @@ pytest-mock>=3.10.0
 # Database and storage
 sqlite-utils>=3.35.2
 redis>=5.0.0
+psycopg2-binary>=2.9.9
+
+# Encryption
+cryptography>=42.0.0
+
+# WebSocket support
+websockets>=12.0
