feat: Add DeepSeek LLM, language tools, and multi-VCS support
- Add DeepSeek LLM adapter with API integration
- Add open source test frameworks, debug tools, and linters for 16 languages
  (Python, JS, TS, Ruby, Go, Rust, Java, C#, C++, C, PHP, Shell, HTML, CSS, Julia, Swift)
- Add GitLab and Bitbucket support alongside GitHub
- Add VCSConfig for multi-VCS provider configuration
- Add comprehensive tests for all new features

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,11 @@ LM_STUDIO_URL=http://localhost:1234/v1/chat/completions
 # GEMINI_API_KEY=your-gemini-key
 # MISTRAL_API_KEY=your-mistral-key
 
+# DeepSeek (open source, competitive performance)
+# DEEPSEEK_API_KEY=your-deepseek-key
+# DEEPSEEK_API_URL=https://api.deepseek.com/v1/chat/completions
+# DEEPSEEK_MODEL=deepseek-chat
+
 # LLM Settings
 LLM_TIMEOUT=60
 LLM_MAX_TOKENS=512
@@ -160,6 +165,23 @@ INCREMENTAL_INDEX_ENABLED=true
 INDEX_WATCH_ENABLED=false
 INDEX_REFRESH_INTERVAL=86400
 GIT_INTEGRATION_ENABLED=true
+
+# =============================================================================
+# VCS (Version Control) Provider Configuration
+# =============================================================================
+# Default VCS provider: github, gitlab, or bitbucket (auto-detected from remote URL if not set)
+# VCS_PROVIDER=github
+
+# GitHub Configuration
+# GITHUB_TOKEN=ghp_your-github-token
+
+# GitLab Configuration (supports GitLab.com and self-hosted)
+# GITLAB_TOKEN=glpat-your-gitlab-token
+# GITLAB_URL=https://gitlab.com
+
+# Bitbucket Configuration
+# BITBUCKET_TOKEN=your-bitbucket-app-password
+# BITBUCKET_USERNAME=your-bitbucket-username
 
 # =============================================================================
 # Data Encryption Settings
